combo, snacks, drinks, deserts

--- a/style.sass
+++ b/style.sass
@@ -1,9 +1,10 @@
 *
     font-family: 'Nunito', sans-serif
     font-weight: 400
+    scroll-behavior: smooth
 
 body
-    padding-bottom: 64px
+    padding-bottom: 84px
 
 .container
     max-width: 1092px
@@ -36,23 +37,29 @@ h2
 .card
     max-width: 250px
     width: 100%
-    max-height: 370px
+    min-height: 370px
     height: 100%
     transition: all 0.5s ease-out
+    display: flex
+    flex-direction: column
     img
         margin: 0 15px
         margin-bottom: 5px
     &__name
         font-weight: 600
         font-size: 20px
+        line-height: 27px
         margin-bottom: 10px
+        flex-grow: 1
     &__descr
         margin-bottom: 11px
+        margin-right: 15px
         min-height: 57px
         color: #73798C
         font-weight: 400
         font-size: 14px
         line-height: 19px
+        flex-grow: 1
     &__bottom
         margin-right: 20px
         display: flex
@@ -131,7 +138,8 @@ h2
         margin-bottom: 20px
     .content
         padding-top: 10px
-        height: 174px
+        height: 104px
+        margin-bottom: 50px
         display: flex
         width: max-content
     &__card
@@ -158,7 +166,8 @@ h2
         line-height: 22px
 
 .product
-    margin-bottom: 70px
+    padding-top: 20px
+    margin-bottom: 50px
     .content
         display: grid
         grid-template-columns: repeat(4, 1fr)
