--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,11 @@
 * {
   font-family: "Nunito", sans-serif;
   font-weight: 400;
+  scroll-behavior: smooth;
 }
 
 body {
-  padding-bottom: 64px;
+  padding-bottom: 84px;
 }
 
 .container {
@@ -43,9 +44,11 @@ h2 {
 .card {
   max-width: 250px;
   width: 100%;
-  max-height: 370px;
+  min-height: 370px;
   height: 100%;
   transition: all 0.5s ease-out;
+  display: flex;
+  flex-direction: column;
 }
 .card img {
   margin: 0 15px;
@@ -54,15 +57,19 @@ h2 {
 .card__name {
   font-weight: 600;
   font-size: 20px;
+  line-height: 27px;
   margin-bottom: 10px;
+  flex-grow: 1;
 }
 .card__descr {
   margin-bottom: 11px;
+  margin-right: 15px;
   min-height: 57px;
   color: #73798C;
   font-weight: 400;
   font-size: 14px;
   line-height: 19px;
+  flex-grow: 1;
 }
 .card__bottom {
   margin-right: 20px;
@@ -164,7 +171,8 @@ h2 {
 }
 .new .content {
   padding-top: 10px;
-  height: 174px;
+  height: 104px;
+  margin-bottom: 50px;
   display: flex;
   width: max-content;
 }
@@ -197,7 +205,8 @@ h2 {
 }
 
 .product {
-  margin-bottom: 70px;
+  padding-top: 20px;
+  margin-bottom: 50px;
 }
 .product .content {
   display: grid;
