--- a/style.sass
+++ b/style.sass
@@ -28,24 +28,36 @@ h2
     line-height: 21.8px
     text-align: center
     border: none
+    transition: all 0.3s ease-out
+    &:hover
+        cursor: pointer
+        background-color: #FFD0B2
+        color: #D55406
     &--orange
         color: #fff
         background-color: #F96900
-    &:hover
-        cursor: pointer
+        &:hover
+            color: #fff
+            background-color: #ED5D08
 
 .card
+    position: relative
     max-width: 250px
     width: 100%
     min-height: 370px
     height: 100%
-    transition: all 0.5s ease-out
     display: flex
     flex-direction: column
     img
+        top: 0
+        position: absolute
         margin: 0 15px
         margin-bottom: 5px
+        transition: all 0.3s ease-out
+        &:hover
+            top: 3px
     &__name
+        margin-top: 220px
         font-weight: 600
         font-size: 20px
         line-height: 27px
@@ -102,6 +114,7 @@ h2
     &__nav
         max-width: 467px
         width: 100%
+        
         .active
             color: #F96900
         ul
@@ -113,6 +126,7 @@ h2
         a
             color: #000
             font-size: 14px
+            transition: all 0.3s ease-out
             &:hover
                 color: #F96900
 
@@ -131,9 +145,29 @@ h2
             cursor: pointer
     .active
         opacity: 1
+    &__dotts
+        position: absolute
+        bottom: 17px
+        display: flex
+        justify-content: center
+        transition: all 0.5s ease-out
+        opacity: 0
+        .dot
+            margin: 0 4px
+            width: 12px
+            height: 12px
+            background: #554D4A
+            border-radius: 50%
+            border: none
+            &:hover
+                cursor: pointer
+    &:hover
+        .slider__dotts
+            opacity: 1
 
 .new
     overflow: hidden
+    
     h2
         margin-bottom: 20px
     .content
@@ -148,6 +182,7 @@ h2
         margin-right: 20px
         padding: 14px 18px
         display: flex
+        transition: all 0.3s ease-out
         align-items: center
         box-shadow: 0px 6px 25px rgba(6, 5, 50, 0.05)
         border-radius: 10px
@@ -156,6 +191,7 @@ h2
             margin-right: 22px
         &:hover
             cursor: pointer
+            box-shadow: rgb(6 5 50 / 15%) 0px 0px 12px -4px
     &__name
         margin-bottom: 4px
         font-size: 14px
