--- a/style/style.css
+++ b/style/style.css
@@ -32,29 +32,43 @@ h2 {
   line-height: 21.8px;
   text-align: center;
   border: none;
+  transition: all 0.3s ease-out;
+}
+.button:hover {
+  cursor: pointer;
+  background-color: #FFD0B2;
+  color: #D55406;
 }
 .button--orange {
   color: #fff;
   background-color: #F96900;
 }
-.button:hover {
-  cursor: pointer;
+.button--orange:hover {
+  color: #fff;
+  background-color: #ED5D08;
 }
 
 .card {
+  position: relative;
   max-width: 250px;
   width: 100%;
   min-height: 370px;
   height: 100%;
-  transition: all 0.5s ease-out;
   display: flex;
   flex-direction: column;
 }
 .card img {
+  top: 0;
+  position: absolute;
   margin: 0 15px;
   margin-bottom: 5px;
+  transition: all 0.3s ease-out;
+}
+.card img:hover {
+  top: 3px;
 }
 .card__name {
+  margin-top: 220px;
   font-weight: 600;
   font-size: 20px;
   line-height: 27px;
@@ -138,6 +152,7 @@ h2 {
 .header__nav a {
   color: #000;
   font-size: 14px;
+  transition: all 0.3s ease-out;
 }
 .header__nav a:hover {
   color: #F96900;
@@ -162,6 +177,28 @@ h2 {
 .slider .active {
   opacity: 1;
 }
+.slider__dotts {
+  position: absolute;
+  bottom: 17px;
+  display: flex;
+  justify-content: center;
+  transition: all 0.5s ease-out;
+  opacity: 0;
+}
+.slider__dotts .dot {
+  margin: 0 4px;
+  width: 12px;
+  height: 12px;
+  background: #554D4A;
+  border-radius: 50%;
+  border: none;
+}
+.slider__dotts .dot:hover {
+  cursor: pointer;
+}
+.slider:hover .slider__dotts {
+  opacity: 1;
+}
 
 .new {
   overflow: hidden;
@@ -182,6 +219,7 @@ h2 {
   margin-right: 20px;
   padding: 14px 18px;
   display: flex;
+  transition: all 0.3s ease-out;
   align-items: center;
   box-shadow: 0px 6px 25px rgba(6, 5, 50, 0.05);
   border-radius: 10px;
@@ -192,6 +230,7 @@ h2 {
 }
 .new__card:hover {
   cursor: pointer;
+  box-shadow: rgba(6, 5, 50, 0.15) 0px 0px 12px -4px;
 }
 .new__name {
   margin-bottom: 4px;
