--- a/style.sass
+++ b/style.sass
@@ -17,6 +17,17 @@ h2
     font-size: 24px
     margin-bottom: 40px
 
+.logo
+    display: flex
+    img
+        margin-right: 14.67px
+    h1
+        font-weight: 800
+        font-size: 25px
+        margin-bottom: 9px
+    p
+        font-size: 12px
+
 .button
     height: 40px
     font-weight: 400
