--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,21 @@ h2 {
   margin-bottom: 40px;
 }
 
+.logo {
+  display: flex;
+}
+.logo img {
+  margin-right: 14.67px;
+}
+.logo h1 {
+  font-weight: 800;
+  font-size: 25px;
+  margin-bottom: 9px;
+}
+.logo p {
+  font-size: 12px;
+}
+
 .button {
   height: 40px;
   font-weight: 400;
