--- a/style.sass
+++ b/style.sass
@@ -74,6 +74,9 @@ h2
         line-height: 27px
         margin-bottom: 10px
         flex-grow: 1
+        max-width: 201px
+        width: 100%
+        z-index: 1
     &__descr
         margin-bottom: 11px
         margin-right: 15px
