--- a/style/style.css
+++ b/style/style.css
@@ -89,6 +89,9 @@ h2 {
   line-height: 27px;
   margin-bottom: 10px;
   flex-grow: 1;
+  max-width: 201px;
+  width: 100%;
+  z-index: 1;
 }
 .card__descr {
   margin-bottom: 11px;
