--- a/style.sass
+++ b/style.sass
@@ -160,6 +160,7 @@ h2
         width: 100%
         opacity: 0.2
         margin: 0 15px
+        border-radius: 15px
         &:hover
             cursor: pointer
     .active
