--- a/style.sass
+++ b/style.sass
@@ -237,11 +237,57 @@ h2
     padding-top: 50px
     padding-bottom: 36px
     &__top
-        hr
-            margin: 0
-            margin-bottom: 40px
-            opacity: 0.2
-            height: 1px
+        display: flex
+        justify-content: space-between
+    &__lists
+        display: grid
+        grid-template-columns: repeat(4, 1fr)
+        max-width: 666px
+        width: 100%
+        color: #fff
+        p
+            margin-bottom: 10px
+        li
+            margin-bottom: 10px
+            max-width: 130px
+            width: 100%
+        a
+            color: #fff
+            opacity: 0.7
+            line-height: 26px
+            transition: all 0.3s ease-out
+            &:hover
+                opacity: 1
+    &__contacts
+        a
+            display: inline-block
+        img
+            margin-bottom: 29px
+    &__phone
+        margin-bottom: 26px
+        text-align: right
+        a
+            color: #fff
+            font-weight: 600
+            font-size: 26px
+            line-height: 26px
+        p
+            margin-top: 6px
+            font-size: 15px
+            color: #FFFFFF
+            opacity: 0.5
+    &__mail
+        text-align: right
+        a
+            font-size: 15px
+            line-height: 20px
+            color: #FFFFFF
+            opacity: 0.9
+    hr
+        margin: 0
+        margin-bottom: 40px
+        opacity: 0.2
+        height: 1px
     &__bottom
         .wrapper
             display: flex
