--- a/style.sass
+++ b/style.sass
@@ -3,6 +3,9 @@
     font-weight: 400
     scroll-behavior: smooth
 
+.d-none
+    display: none !important
+
 .container
     max-width: 1092px
     width: 100%
@@ -16,13 +19,14 @@ h2
 
 .logo
     display: flex
+    align-items: center
     img
         margin-right: 14.67px
     h1
         font-weight: 800
         font-size: 25px
-        margin-bottom: 9px
     p
+        margin-top: 9px
         font-size: 12px
 
 .button
@@ -95,6 +99,10 @@ h2
     &:hover
         cursor: pointer
 
+.order
+    display: flex
+    flex-direction: column
+
 .header
     margin-top: 25px
     &__content
@@ -118,7 +126,7 @@ h2
     position: sticky
     top: 0
     z-index: 100
-    padding: 9px 0
+    padding: 9px 16px
     background-color: #fff
     .content
         max-width: 1060px
@@ -157,12 +165,14 @@ h2
         max-width: 1090px
         width: 100%
         opacity: 0.2
-        margin: 0 15px
+        padding: 0 16px
         border-radius: 15px
         &:hover
             cursor: pointer
     .active
         opacity: 1
+    .mobile
+        display: none 
     &__dotts
         position: absolute
         bottom: 17px
@@ -354,3 +364,60 @@ h2
             img
                 transition: all 0.5s ease-out
                 filter: invert(76%) sepia(5%) saturate(167%) hue-rotate(182deg) brightness(95%) contrast(97%)
+
+@media (max-width: 1200px)
+    .container
+        max-width: 1092px
+
+// @media (max-width: 992px)
+//     .container
+//         max-width: 960px
+
+// @media (max-width: 768px)
+//     .container
+//         max-width: 720px
+
+@media (max-width: 576px)
+    .header
+        margin-top: 12px
+    .logo
+        p
+            display: none
+    .header
+        &__phone
+            display: none
+    
+    .menu
+        order: 3
+        &__basket
+            display: none
+
+    .slider
+        margin-top: 0
+        justify-content: flex-start
+        margin-left: 16px
+        margin-bottom: 20px
+        img
+            padding: 0
+            margin-left: 0
+            margin-right: 10px
+        &__dotts
+            display: none
+        .desktop
+            display: none
+        .mobile
+            display: block   
+    
+    .new
+        .content
+            margin-bottom: 30px
+        h2
+            margin-bottom: 10px
+        &__card
+            width: 240px
+            height: 108px
+            margin-right: 10px
+
+// @media (max-width: 320px)
+//     .container
+//         max-width: 340px
