--- a/style.sass
+++ b/style.sass
@@ -235,6 +235,7 @@ h2
     .content
         display: grid
         grid-template-columns: repeat(4, 1fr)
+        justify-items: center
         column-gap: 20px
         row-gap: 60px
     &:last-of-type
@@ -369,22 +370,23 @@ h2
     .container
         max-width: 1092px
 
-// @media (max-width: 992px)
-//     .container
-//         max-width: 960px
+@media (max-width: 992px)
+    .product
+        .content
+            grid-template-columns: repeat(3, 1fr)
 
-// @media (max-width: 768px)
-//     .container
-//         max-width: 720px
+@media (max-width: 768px)
+    .product
+        .content
+            grid-template-columns: repeat(2, 1fr)
 
 @media (max-width: 576px)
     .header
         margin-top: 12px
+        &__phone
+            display: none
     .logo
         p
-            display: none
-    .header
-        &__phone
             display: none
     
     .menu
@@ -434,7 +436,55 @@ h2
             width: 240px
             height: 108px
             margin-right: 10px
+    
+    .product
+        .content
+            grid-template-columns: 1fr
+            row-gap: 0
+        h2
+            margin-bottom: 20px
+    
+    .card
+        max-width: 576px
+        padding: 16px 0
+        flex-direction: row
+        align-items: center
+        min-height: auto
+        img
+            margin: 0
+            margin-right: 7px
+            position: unset
+            width: 115px
+        &__name
+            margin-top: 0
+            margin-bottom: 4px
+            line-height: 20px
+            font-size: 18px
+        &__descr
+            font-size: 12px
+            line-height: 16px
+            margin-right: 0
+            margin-bottom: 8px
+            min-height: unset
+        // &__price
+        button
+            display: none
+        &__bottom
+            .button
+                width: 96px
+
+    .button
+        font-size: 14px
+        height: 32px
+        padding: 6px 20px
+    
+    #pizza
+        h2
+            display: none
+        .product
+            margin-top: 0
 
 // @media (max-width: 320px)
-//     .container
-//         max-width: 340px
+    // .product
+    //     .content
+    //         grid-template-columns: 1fr
