--- a/style.sass
+++ b/style.sass
@@ -101,6 +101,7 @@ h2
 .order
     display: flex
     flex-direction: column
+    position: relative
 
 .header
     margin-top: 25px
@@ -373,9 +374,61 @@ h2
     .mobile
         display: none
 
-@media (max-width: 1200px)
-    .container
-        max-width: 1092px
+.modal
+    position: absolute
+    z-index: 100
+    border-radius: 20px
+    left: 50%
+    top: 1vh
+    transform: translateX(-50%) translateY(50%)
+    max-width: 920px
+    width: 100%
+    height: 610px
+    background-color: #FFFFFF
+    overflow: hidden
+    box-shadow: 0px 6px 55px rgba(0, 0, 0, 0.1)
+    &__content
+        display: flex
+        margin: 0 auto
+        height: 100%
+    &__img
+        position: relative
+        // max-width: 540px
+        width: 100%
+        margin-top: 10px
+        margin-left: 18px
+        display: flex
+        align-items: center
+        justify-content: center
+    &__border
+        .border
+            width: 458px
+            position: absolute
+            top: 56px
+            left: 16px
+            z-index: 101
+    &__pizza
+        .big
+            width: 492px
+        .middle
+            width: 372px
+        .small
+            width: 300px
+
+    &__settings
+        max-width: 380px
+        width: 100%
+        padding: 30px
+        background: #FCFCFC
+        h2
+            font-weight: 600
+            line-height: 33px
+            margin-bottom: 3px
+        p
+            font-weight: 400
+            font-size: 14px
+            line-height: 19px
+            color: #73798C
 
 @media (max-width: 992px)
     .product
