--- a/style/style.css
+++ b/style/style.css
@@ -122,6 +122,7 @@ h2 {
 .order {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .header {
@@ -455,11 +456,68 @@ h2 {
   display: none;
 }
 
-@media (max-width: 1200px) {
-  .container {
-    max-width: 1092px;
-  }
+.modal {
+  position: absolute;
+  z-index: 100;
+  border-radius: 20px;
+  left: 50%;
+  top: 1vh;
+  transform: translateX(-50%) translateY(50%);
+  max-width: 920px;
+  width: 100%;
+  height: 610px;
+  background-color: #FFFFFF;
+  overflow: hidden;
+  box-shadow: 0px 6px 55px rgba(0, 0, 0, 0.1);
 }
+.modal__content {
+  display: flex;
+  margin: 0 auto;
+  height: 100%;
+}
+.modal__img {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+  margin-left: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal__border .border {
+  width: 458px;
+  position: absolute;
+  top: 56px;
+  left: 16px;
+  z-index: 101;
+}
+.modal__pizza .big {
+  width: 492px;
+}
+.modal__pizza .middle {
+  width: 372px;
+}
+.modal__pizza .small {
+  width: 300px;
+}
+.modal__settings {
+  max-width: 380px;
+  width: 100%;
+  padding: 30px;
+  background: #FCFCFC;
+}
+.modal__settings h2 {
+  font-weight: 600;
+  line-height: 33px;
+  margin-bottom: 3px;
+}
+.modal__settings p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  color: #73798C;
+}
+
 @media (max-width: 992px) {
   .product .content {
     grid-template-columns: repeat(3, 1fr);
