--- a/style/style.css
+++ b/style/style.css
@@ -459,21 +459,28 @@ h2 {
 .modal {
   position: absolute;
   z-index: 100;
-  border-radius: 20px;
   left: 50%;
-  top: 1vh;
-  transform: translateX(-50%) translateY(50%);
+  top: 10vh;
+  transform: translateX(-50%);
   max-width: 920px;
   width: 100%;
   height: 610px;
-  background-color: #FFFFFF;
-  overflow: hidden;
   box-shadow: 0px 6px 55px rgba(0, 0, 0, 0.1);
 }
+.modal__back {
+  background-color: #3c3c3c;
+  position: fixed;
+  inset: 0;
+  z-index: 100;
+  overflow: hidden;
+}
 .modal__content {
+  background-color: #FFFFFF;
   display: flex;
   margin: 0 auto;
   height: 100%;
+  overflow: hidden;
+  border-radius: 20px;
 }
 .modal__img {
   position: relative;
@@ -505,6 +512,7 @@ h2 {
   width: 100%;
   padding: 30px;
   background: #FCFCFC;
+  overflow: auto;
 }
 .modal__settings h2 {
   font-weight: 600;
@@ -516,6 +524,21 @@ h2 {
   font-size: 14px;
   line-height: 19px;
   color: #73798C;
+  margin-bottom: 11px;
+}
+.modal__close {
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  top: 20px;
+  right: -40px;
+  padding: 0;
+}
+.modal__close img {
+  width: 24px;
+}
+.modal__close:hover {
+  cursor: pointer;
 }
 
 @media (max-width: 992px) {
