--- a/style.sass
+++ b/style.sass
@@ -453,6 +453,49 @@ h2
         &:hover
             cursor: pointer
 
+    .form
+        &__tags
+            margin-bottom: 20px    
+        &__tag
+            display: inline-block
+            font-size: 13px
+            line-height: 15px
+            color: #4D4D4D
+            margin-bottom: 3px
+            label
+                border-bottom: 1px dashed #72788B
+        &__radios
+            max-width: 320px
+            width: 100%
+            height: 32px
+            background: #F3F3F7
+            border-radius: 100px
+            padding: 2px
+            display: flex
+            align-items: center
+            margin-bottom: 10px
+        &__radio
+            display: inline-block
+            width: 100%
+            text-align: center
+            input
+                display: none
+                &:checked + span
+                    padding: 7px 28px 5px 28px
+                    opacity: 1
+                    background: #FFFFFF
+                    box-shadow: 0px 3px 15px rgba(6, 5, 50, 0.05)
+                    border-radius: 100px
+                    line-height: 16px
+            span
+                font-size: 12px
+                opacity: 0.7
+        h3
+            margin-top: 17px
+            font-weight: 600
+            font-size: 16px
+            margin-bottom: 11px
+
 
 @media (max-width: 992px)
     .product
