--- a/style/style.css
+++ b/style/style.css
@@ -540,6 +540,56 @@ h2 {
 .modal__close:hover {
   cursor: pointer;
 }
+.modal .form__tags {
+  margin-bottom: 20px;
+}
+.modal .form__tag {
+  display: inline-block;
+  font-size: 13px;
+  line-height: 15px;
+  color: #4D4D4D;
+  margin-bottom: 3px;
+}
+.modal .form__tag label {
+  border-bottom: 1px dashed #72788B;
+}
+.modal .form__radios {
+  max-width: 320px;
+  width: 100%;
+  height: 32px;
+  background: #F3F3F7;
+  border-radius: 100px;
+  padding: 2px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.modal .form__radio {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
+.modal .form__radio input {
+  display: none;
+}
+.modal .form__radio input:checked + span {
+  padding: 7px 28px 5px 28px;
+  opacity: 1;
+  background: #FFFFFF;
+  box-shadow: 0px 3px 15px rgba(6, 5, 50, 0.05);
+  border-radius: 100px;
+  line-height: 16px;
+}
+.modal .form__radio span {
+  font-size: 12px;
+  opacity: 0.7;
+}
+.modal .form h3 {
+  margin-top: 17px;
+  font-weight: 600;
+  font-size: 16px;
+  margin-bottom: 11px;
+}
 
 @media (max-width: 992px) {
   .product .content {
