--- a/style.sass
+++ b/style.sass
@@ -380,18 +380,16 @@ h2
 .modal
     position: absolute
     z-index: 100
-    
     left: 50%
     top: 10vh
     transform: translateX(-50%)
     max-width: 920px
     width: 100%
     height: 610px
-    
     box-shadow: 0px 6px 55px rgba(0, 0, 0, 0.1)
     
     &__back
-        background-color: #3c3c3c
+        background-color: rgba(90, 90, 90, 0.92)
         position: fixed
         inset: 0
         z-index: 100
