--- a/style/style.css
+++ b/style/style.css
@@ -468,7 +468,7 @@ h2 {
   box-shadow: 0px 6px 55px rgba(0, 0, 0, 0.1);
 }
 .modal__back {
-  background-color: #3c3c3c;
+  background-color: rgba(90, 90, 90, 0.92);
   position: fixed;
   inset: 0;
   z-index: 100;
