--- a/style/style.css
+++ b/style/style.css
@@ -511,15 +511,20 @@ h2 {
   max-width: 380px;
   width: 100%;
   padding: 30px;
+  padding-bottom: 40px;
+  margin-bottom: 50px;
   background: #FCFCFC;
   overflow: auto;
 }
-.modal__settings h2 {
+.modal__settings__wrapper {
+  background: #FCFCFC;
+}
+.modal__title {
   font-weight: 600;
   line-height: 33px;
   margin-bottom: 3px;
 }
-.modal__settings p {
+.modal__descr {
   font-weight: 400;
   font-size: 14px;
   line-height: 19px;
@@ -539,6 +544,9 @@ h2 {
 }
 .modal__close:hover {
   cursor: pointer;
+}
+.modal .form {
+  position: relative;
 }
 .modal .form__tags {
   margin-bottom: 20px;
@@ -578,7 +586,6 @@ h2 {
   background: #FFFFFF;
   box-shadow: 0px 3px 15px rgba(6, 5, 50, 0.05);
   border-radius: 100px;
-  line-height: 16px;
 }
 .modal .form__radio span {
   font-size: 12px;
@@ -589,6 +596,62 @@ h2 {
   font-weight: 600;
   font-size: 16px;
   margin-bottom: 11px;
+}
+.modal .form__dops {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+.modal .form__button {
+  position: fixed;
+  bottom: 30px;
+  width: 100%;
+}
+.modal .form__button button {
+  max-width: 320px;
+  width: 100%;
+}
+
+.dop {
+  margin-top: 3px;
+  position: relative;
+  overflow: hidden;
+  width: 100px;
+  height: 150px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 20px rgba(6, 5, 50, 0.05);
+  border-radius: 12px;
+}
+.dop__text {
+  position: absolute;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.dop__name {
+  font-size: 12px;
+  line-height: 16px;
+  color: #000;
+  width: 81px;
+  margin-bottom: 4px;
+  min-height: 32px;
+}
+.dop__price {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  color: #000;
+}
+.dop input {
+  display: none;
+}
+.dop__check {
+  border: 1px solid #F96900;
+}
+.dop__check__icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 @media (max-width: 992px) {
